# ooi-data-explorations

./: .gitattributes  .gitignore  LICENSE  LICENSE.md  README.md  _config.yml  _toc.yml  table_checker.py
python/: README.md  environment.yml  pyproject.toml  python.md  requirements.txt  setup.cfg  setup.py  version.py
python/conda-recipe/: meta.yaml
python/examples/camds/: uncabled.ipynb
python/examples/ctdbp/: combine_mooring_ctdbp.py  recovered_host_ctdbp.py  recovered_inst_ctdbp.py  telemetered_ctdbp.py
python/examples/ctdpf/: cspp_ctdpf.py
python/examples/dosta/: combine_mooring_dosta.py  recovered_host_ctdbp_dosta.py  recovered_host_solo_dosta.py  recovered_inst_ctdbp_dosta.py  telemetered_ctdbp_dosta.py  telemetered_solo_dosta.py
python/examples/fdchp/: fdchp_test.py  fdchp_utils.py  plot_fdchp.py  process_fdchp.py
python/examples/fdhcp/: fdchp_test.py  fdchp_utils.py  process_fdchp.py
python/examples/flort/: cabled_profiler_flort.py  cspp_flort.py  recovered_host_flort.py  recovered_inst_flort.py  telemetered_flort.py  wfp_flort.py
python/examples/metbk/: recovered_host_metbk.py  telemetered_bulk_flux.py  telemetered_metbk.py
python/examples/notebooks/: M2M Explorations.ipynb  m2m_explorations.ipynb
python/examples/nutnr/: cspp_nutnr.py  recovered_host_nutnr.py  recovered_inst_nutnr.py  telemetered_nutnr.py
python/examples/optaa/: cabled_benthic_optaa.py  cabled_profiler_optaa.py  cspp_optaa.py  recovered_host_optaa.py  telemetered_optaa.py
python/examples/pco2a/: recovered_host_pco2a.py  telemetered_pco2a.py
python/examples/pco2w/: combine_mooring_pco2w.py  recovered_host_pco2w.py  recovered_inst_pco2w.py  telemetered_pco2w.py
python/examples/phsen/: combine_mooring_phsen.py  imodem_phsen.py  recovered_host_phsen.py  recovered_inst_phsen.py  streamed_phsen.py  telemetered_phsen.py
python/examples/spkir/: cspp_spkir.py  recovered_host_spkir.py  telemetered_spkir.py
python/examples/tensorflow/: sealion_detection_example.ipynb  sealion_training_example.ipynb
python/examples/vel3d/: recovered_host_vel3d.py  recovered_wfp_vel3d.py  telemetered_vel3d.py  telemetered_wfp_vel3d.py
python/examples/velpt/: cspp_velpt.py  recovered_host_velpt.py  recovered_inst_velpt.py  telemetered_velpt.py
python/examples/water_quality/: wqx_ctdbp.py  wqx_dosta.py  wqx_flort.py  wqx_nutnr.py  wqx_phsen.py
python/examples/wavss/: recovered_host_wavss.py  recovered_host_wavss_directional.py  recovered_host_wavss_summary.py  telemetered_wavss.py  telemetered_wavss_directional.py  telemetered_wavss_summary.py
python/ooi_data_explorations/: __init__.py  bottles.py  calibrations.py  combine_data.py  common.py  config.yaml.changeme  construct_urls.py  data_request.py  m2m_urls.yml  profilers.py  underway.py
python/ooi_data_explorations/cabled/: process_flort.py  process_optaa.py  process_phsen.py
python/ooi_data_explorations/qartod/: climatology.py  discrete_samples.py  gross_range.py  plotting.py  qc_processing.py  reporting.py  table_checker.py
python/ooi_data_explorations/uncabled/: Untitled.ipynb  ooim2m_cspp.py  process_adcp.py  process_ctdbp.py  process_ctdpf.py  process_dofst.py  process_dosta.py  process_fdchp.py  process_flord.py  process_flort.py  process_metbk.py  process_mopak.py  process_nutnr.py  process_optaa.py  process_parad.py  process_pco2a.py  process_pco2w.py  process_phsen.py  process_spkir.py  process_turbd.py  process_vel3d.py  process_velpt.py  process_wavss.py  utilities_optaa.py
python/utilities/harvesters/: combine_datasets.sh  harvest_ce_ctdbp.sh  harvest_ce_ctdpf.sh  harvest_ce_dosta.sh  harvest_ce_flort.sh  harvest_ce_metbk.sh  harvest_ce_nutnr.sh  harvest_ce_optaa.sh  harvest_ce_pco2a.sh  harvest_ce_pco2w.sh  harvest_ce_phsen.sh  harvest_ce_profiler_flort.sh  harvest_ce_spkir.sh  harvest_ce_vel3d.sh  harvest_ce_velpt.sh  harvest_ce_wavss.sh  harvest_cp_phsen.sh  harvest_glbl_phsen.sh  harvest_rca_phsen.sh  master_harvester_ce01issm.sh
python/utilities/misc/: generate_fcoeff.sh
python/utilities/qartod/: climatology.py  gross_range.py  qartod_ce_ctdbp.sh  qartod_ce_ctdpf.sh  (+14 more)
(+589 files in other folders)
